161 exclude contract upgrade
