# swagger.json
@@ -64,27 +64,18 @@
         }
       }
     },
-    "/network/notaries" : {
+    "/network/nodes/self" : {
       "get" : {
         "tags" : [ "network" ],
         "description" : "",
-        "parameters" : [ {
-          "name" : "x500-name",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
+        "parameters" : [ ],
         "responses" : {
           "200" : {
             "description" : "",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/net.corda.core.identity.Party"
-                  }
+                  "$ref" : "#/components/schemas/io.bluebank.braid.corda.services.SimpleNodeInfo"
                 }
               }
             }
@@ -112,18 +103,27 @@
         }
       }
     },
-    "/network/nodes/self" : {
+    "/network/notaries" : {
       "get" : {
         "tags" : [ "network" ],
         "description" : "",
-        "parameters" : [ ],
+        "parameters" : [ {
+          "name" : "x500-name",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/io.bluebank.braid.corda.services.SimpleNodeInfo"
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/net.corda.core.identity.Party"
+                  }
                 }
               }
             }
@@ -678,6 +678,20 @@
   },
   "components" : {
     "schemas" : {
+      "Error" : {
+        "required" : [ "message", "type" ],
+        "type" : "object",
+        "properties" : {
+          "message" : {
+            "type" : "string",
+            "description" : "the error message"
+          },
+          "type" : {
+            "type" : "string",
+            "description" : "the type of error"
+          }
+        }
+      },
       "io.bluebank.braid.corda.services.SimpleNodeInfo" : {
         "required" : [ "addresses", "legalIdentities" ],
         "type" : "object",
@@ -1649,18 +1663,6 @@
         "required" : [ "id", "inputs", "outputStates", "outputs", "references" ],
         "type" : "object",
         "properties" : {
-          "outputs" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/net.corda.core.contracts.TransactionState_net_corda_core_contracts_ContractState"
-            }
-          },
-          "outputStates" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/net.corda.core.contracts.ContractState"
-            }
-          },
           "inputs" : {
             "type" : "array",
             "items" : {
@@ -1675,6 +1677,18 @@
           },
           "notary" : {
             "$ref" : "#/components/schemas/net.corda.core.identity.Party"
+          },
+          "outputs" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/net.corda.core.contracts.TransactionState_net_corda_core_contracts_ContractState"
+            }
+          },
+          "outputStates" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/net.corda.core.contracts.ContractState"
+            }
           },
           "id" : {
             "type" : "string",
@@ -1704,6 +1718,9 @@
             "description" : "Base 58 Encoded Secure Hash",
             "example" : "GfHq2tTVk9z4eXgyUuofmR16H6j7srXt8BCyidKdrZL5JEwFqHgDSuiinbTE"
           },
+          "notary" : {
+            "$ref" : "#/components/schemas/net.corda.core.identity.Party"
+          },
           "outputs" : {
             "type" : "array",
             "items" : {
@@ -1715,9 +1732,6 @@
             "items" : {
               "$ref" : "#/components/schemas/net.corda.core.contracts.ContractState"
             }
-          },
-          "notary" : {
-            "$ref" : "#/components/schemas/net.corda.core.identity.Party"
           },
           "id" : {
             "type" : "string",
@@ -1738,9 +1752,6 @@
               "example" : "736F6D654279746573"
             }
           },
-          "coreTransaction" : {
-            "$ref" : "#/components/schemas/net.corda.core.transactions.CoreTransaction"
-          },
           "references" : {
             "type" : "array",
             "items" : {
@@ -1751,6 +1762,9 @@
             "type" : "string",
             "description" : "Base 58 Encoded Secure Hash",
             "example" : "GfHq2tTVk9z4eXgyUuofmR16H6j7srXt8BCyidKdrZL5JEwFqHgDSuiinbTE"
+          },
+          "coreTransaction" : {
+            "$ref" : "#/components/schemas/net.corda.core.transactions.CoreTransaction"
           },
           "notaryChangeTransaction" : {
             "type" : "boolean"
@@ -2161,20 +2175,6 @@
           }
         }
       },
-      "Error" : {
-        "required" : [ "message", "type" ],
-        "type" : "object",
-        "properties" : {
-          "message" : {
-            "type" : "string",
-            "description" : "the error message"
-          },
-          "type" : {
-            "type" : "string",
-            "description" : "the type of error"
-          }
-        }
-      },
       "net.corda.core.flows.AbstractStateReplacementFlow_Proposal" : {
         "required" : [ "modification" ],
         "type" : "object",
@@ -2321,7 +2321,7 @@
       "net.corda.core.contracts.TimeWindow" : {
         "type" : "object",
         "properties" : {
-          "midpoint" : {
+          "fromTime" : {
             "type" : "string",
             "description" : "JSR310 encoded time representation of Instant"
           },
@@ -2329,7 +2329,7 @@
             "type" : "string",
             "description" : "JSR310 encoded time representation of Instant"
           },
-          "fromTime" : {
+          "midpoint" : {
             "type" : "string",
             "description" : "JSR310 encoded time representation of Instant"
           }
